# bsc-thesis-mcts-rl-isabelle

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  flake.nix  pyproject.toml  setup_qisabelle.sh
beamsearch/: __init__.py  run.py
beamsearch/core/: __init__.py  client.py  config.py  proof_state.py
beamsearch/data/: __init__.py  few_shot.py
beamsearch/llm/: __init__.py  agent.py  constants.py  critics.py  models.py  prompts.py  reasoning.py
beamsearch/tools/: __init__.py  isabelle_toolkit.py  sledgehammer.py
beamsearch/utils/: __init__.py  io.py  parser.py  proof.py  visualization.py
mcts/: __init__.py  base_env.py  data_mcts.py  data_minif2f.py  inference_loader.py  inference_mcts.py  isabelle_interface.py  launcher.py  logging_utils.py  main.py  search.py  shared_types.py  trainer_ppo.py  utils.py  wandb_manager.py
mcts/tests/: __init__.py  mock_env.py  mock_inference.py  test_data_minif2f.py  test_inference_plain_text.py  test_isabelle_interface.py  test_mcts_complete.py  test_mcts_mock.py  test_mcts_real_env_mock_inference.py  test_mcts_standalone.py  test_mcts_standalone_mock.py  test_reward_fix.py  test_small_parallel.py  test_utils.py
miniF2F-facebook/lean/scripts/: lint_style.sync-conflict-20250916-220605-DCPOYAE.py
